--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -13,7 +13,8 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.1",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "@repo/common" :"*"
   },
   "devDependencies": {
     "@types/express": "^5.0.0"
